--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -37,3 +37,10 @@ token_uri = "https://oauth2.googleapis.com/token"
 auth_provider_x509_cert_url = "https://www.googleapis.com/oauth2/v1/certs"
 client_x509_cert_url = "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40college-notes-hub-4416d.iam.gserviceaccount.com"
 universe_domain = "googleapis.com"
+
+
+
+# .streamlit/secrets.toml
+[email]
+sender = "hardikaneja20@gmail.com"
+password = "eemoqqeatdrxgoqw"  # <- yeh app password daalo
